# fun-lang

./: .gitignore  Cargo.toml  build.rs  flake.nix
src/: ast.rs  core.rs  db.rs  elaboration.rs  fun.lalrpop  interpreter.rs  lexer.rs  main.rs  parser.rs  typecheck.rs
